# company-dossier-scoring

./: .env.example  .gitignore  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/companies/: route.ts
apps/web/app/dossiers/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: AppShell.tsx  CompanyCreateForm.tsx  DeleteCompanyButton.tsx  LibraryActions.tsx  ModelSettingsForm.tsx  NewDossierWizard.tsx  ScoreReport.tsx  StudioChat.tsx
apps/web/lib/: data.ts  db.ts  model-settings.ts  services.ts
hooks/: README.md
infra/: docker-compose.yml
infra/ocr/: Dockerfile.example
infra/postgres/: init.sql
prompts/: continue.md
services/parser/: Dockerfile  pyproject.toml
services/parser/app/: main.py
services/parser/app/core/: config.py  db.py
services/parser/app/pipeline/: processing.py
services/parser/tests/: test_processing.py
services/scoring/: Dockerfile  pyproject.toml
services/scoring/app/: main.py
services/scoring/app/engine/: llm.py  scoring.py
services/scoring/app/templates/: compliance_review.yaml  credit_assessment.yaml  esg_review.yaml  investment_dd.yaml
services/scoring/tests/: test_scoring.py
services/studio/: Dockerfile  pyproject.toml
services/studio/app/: llm.py  main.py
services/studio/tests/: test_studio.py
skills/: README.md  m0-validation.md
tools/: dev-local.sh
tools/demo/: e2e-smoke.mjs
tools/e2e/: README.md
tools/ocr/: README.md  verify_paddleocr.py
(+13 files in other folders)
