[project]
name = "company-intel-parser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.9",
  "minio>=7.2.0",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "arq>=0.28.0"
]
[dependency-groups]
dev = ["pytest>=8.2.0"]
